--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@ Page variables
 
 :root {
     /*color scheme*/
-    --primary_colour: #000;
+    --primary_colour: hsl(264, 71%, 28%); /*purple - fallback #3D157A*/
+    --dark_colour: hsl(210, 11%, 15%); /*darkgrey - fallback #212529*/ 
+    --light_colour: hsl(210, 17%, 98%); /*white - fallback #f8f9fa*/ 
+
     /*fonts*/
-    --text_font: Verdana;
+    --header_font:'Limelight', 'Arial Black', cursive;
+    --text_font: 'Roboto', Verdana, sans-serif;
+
   }
   
   
@@ -21,23 +26,28 @@ Page variables
     scroll-behavior: smooth;
   }
   
-  /*===============================
-  Global styles and reset defaults
-  ================================*/
-  
   body * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
   
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+  }
+  
   /*reset default font - never shall Time New Roman be seen again!*/
   h1,
+  h2,
   h3,
+  h4,
   h5,
+  h6,
   p,
+  a,
   li {
     font-family: Verdana, sans-serif;
   }
@@ -57,7 +67,9 @@ Page variables
   /*==========================
   Main and Section containers
   ===========================*/
+
   
+
   /*====
   Footer
   =======*/
