--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ nav ul li a {
   padding: var(--middle_space);
   text-decoration: none;
   text-align: center;
-  font-family: var(--header_font);
+  font-family: var(--text_font);
   font-size: clamp(0.8rem, 1.6rem, 2.5rem);
   font-weight: bold;
   letter-spacing: 2px;
@@ -151,18 +151,19 @@ section header {
 
 section header h2 {
   padding: var(--middle_space) var(--wide_space);
+  margin: var(--middle_space) 0;
   border: var(--medium_line) solid var(--primary_col);
   box-shadow: 1px 1px 2px #000, -1px -1px 2px #000;
   background-color: #000;
   color: #fff;
-  font-family: var(--header_font);
+  font-family: var(--text_font);
   font-size: clamp(1.2rem, 2rem, 2.8rem);
   line-height: 1.5;
   letter-spacing: 2px;
 }
 
 section div {
-  margin: 0 var(--wide_space);
+  margin: 0 var(--middle_space);
 }
 
 section p {
@@ -172,19 +173,38 @@ section p {
   line-height: 1.5;
 }
 
-section .text_box {
+.text_box p {
   border-left: var(--medium_line) double var(--primary_col);
-  padding: 0 var(--middle_space);
+  padding: var(--middle_space);
+  margin: var(--middle_space) 0;
 }
 
-section .code_box {
-  margin: var(--wide_space);
+.code_box {
+  margin: var(--wide_space) var(--medium_space);
   padding: var(--wide_space);
-  border-left: var(--medium_line) solid var(--primary_col);
+  border: 1px solid var(--primary_col);
   background-color: #000;
+  color: #fff;
   box-shadow: 2px 2px 2px var(--primary_col);
   font-size: clamp(1rem, 1.4rem, 1.8rem);
   word-wrap:break-word;
+}
+
+.sub_header {
+  margin: var(--middle_space) 0; 
+}
+
+.sub_header h3 {
+  padding: var(--middle_space);
+  border: var(--medium_line) solid #000;
+  box-shadow: 1px 1px 2px #000, -1px -1px 2px #000;
+  background-color: var(--primary_col);
+  color: #fff;
+  font-family: var(--text_font);
+  font-size: clamp(1.2rem, 1.6rem, 1.8rem);
+  line-height: 1.5;
+  letter-spacing: 2px;
+
 }
 /*secondary nav menu showing image gallery with different filters applied*/
 #gallery ul {
