--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ section p {
 }
 
 .code_box {
-  margin: var(--wide_space) var(--medium_space);
+  margin: var(--wide_space);
   padding: var(--wide_space);
   border: 1px solid var(--primary_col);
   background-color: #000;
@@ -192,13 +192,17 @@ section p {
   word-wrap: break-word;
 }
 
+/*highlight code keywords within text block*/
+.code_word, .code_box_comment {
+  font-style: italic;
+}
 .sub_header {
   margin: var(--middle_space) 0;
 }
 
 .sub_header h3 {
   padding: var(--middle_space);
-  border: var(--medium_line) solid #000;
+  border: var(--thin_line) solid #000;
   box-shadow: 1px 1px 2px #000, -1px -1px 2px #000;
   background-color: var(--primary_col);
   color: #fff;
@@ -264,7 +268,9 @@ figure {
 }
 
 figure figcaption {
-  font-size: clamp(0.8rem, 1rem, 1.2rem);
+  font-size: clamp(0.6rem, 0.8rem, 1rem);
+  text-align: center;
+  font-style: italic;
 }
 
 figure img {
@@ -311,6 +317,7 @@ footer #about ul li:hover a{
 }
 
   footer #made_by_me {
+  padding: var(--middle_space);
   background-color: #000;
   text-align: center;
 }
@@ -328,6 +335,7 @@ footer #made_by_me ul li {
 
 footer #made_by_me ul li a {
   color: inherit;
+  font-size: clamp(1.2rem, 1.6rem, 1.8rem);
 }
 
 footer #made_by_me ul li a:hover,
