--- a/style.css
+++ b/style.css
@@ -82,8 +82,11 @@ Header
   grid-area: header;
   border: solid var(--thick_line) #000;
   background-color: var(--primary_col);
-  background-image: radial-gradient(hsl(264, 71%, 28%),
-   hsl(264, 82%, 57%), hsl(264, 71%, 28%));
+  background-image: radial-gradient(
+    hsl(264, 71%, 28%),
+    hsl(264, 82%, 57%),
+    hsl(264, 71%, 28%)
+  );
 }
 
 #top h1 {
@@ -176,7 +179,8 @@ section p {
 }
 
 /*position for back-to-top shortcut*/
-section, section .subsection_box {
+section,
+section .subsection_box {
   position: relative;
 }
 
@@ -198,7 +202,8 @@ section, section .subsection_box {
 }
 
 /*highlight code keywords within text block*/
-.code_word, .code_box_comment {
+.code_word,
+.code_box_comment {
   font-style: italic;
 }
 .sub_header {
@@ -234,7 +239,11 @@ section, section .subsection_box {
   list-style: none;
 }
 
-#gallery li a img {
+#gallery li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:  #000;
   border: var(--thin_line) solid #000;
 }
 
@@ -285,6 +294,61 @@ figure img {
   box-shadow: 0 0 5px #000, 1px 1px 10px var(--primary_col);
 }
 
+/*===================
+Filter Image Examples
+====================*/
+
+/*blur*/
+#blur_img img, #gallery li a[href*="blur"] img {
+  filter: blur(5px);
+}
+
+/*brightness*/
+
+/*contrast*/
+
+/*drop-shadow*/
+
+/*grayscale*/
+
+/*hue-rotate*/
+
+/*invert*/
+
+/*saturate*/
+
+/*opacity*/
+
+/*sepia*/
+
+/*=====================
+Clipped Image Examples
+======================*/
+
+/*inset*/
+
+/*circle*/
+
+/*ellipse*/
+
+/*polygon*/
+
+/*path*/
+
+/*margin-box*/
+
+/*border-box*/
+
+/*padding-box*/
+
+/*content-box*/
+
+/*fill-box*/
+
+/*stroke-box*/
+
+/*view-box*/
+
 /*====
 Footer
 =======*/
@@ -312,17 +376,17 @@ footer #about ul li {
   border-left: var(--thin_line) solid #fff;
 }
 
-footer #about ul li a{
+footer #about ul li a {
   color: inherit;
   text-decoration: none;
 }
 
-footer #about ul li:hover a{
+footer #about ul li:hover a {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
 
-  footer #made_by_me {
+footer #made_by_me {
   padding: var(--middle_space);
   background-color: #000;
   text-align: center;
