--- a/style.css
+++ b/style.css
@@ -353,16 +353,34 @@ Filter Image Examples
 Clipped Image Examples
 ======================*/
 
+#sect_clipping figure {
+  border: var(--thin_line) solid #000;
+}
+
 /*inset*/
+#inset_img img {
+  clip-path: inset(100px 50px);
+}
 
 /*circle*/
+#circle_img img {
+  clip-path: circle(50px at 125px 100px);
+}
 
 /*ellipse*/
+#ellipse_img img {
+  clip-path: ellipse(50px 120px at 50% 50%);
+}
 
 /*polygon*/
+#polygon_img img {
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
 
 /*path*/
-
+#path_img img {
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
 /*margin-box*/
 
 /*border-box*/
